--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "spatie/flysystem-dropbox": "^1.2",
+        "spatie/laravel-backup": "^6.11"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
